:memo: [feat] Add ktlint in Project